# kepler

./: .gitignore  .ignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.txt  version_history.txt
.github/workflows/: deploy-web.yaml  kepler.yaml
assets/: config.cfg
assets/shaders/: atmoshpere.frag  atmosphere.frag  atmosphere.vert  bloom_blur.frag  bloom_combine.frag  bloom_extract.frag  glow.frag  glow.vert  planet.frag  planet.fs  planet.vert  planet.vs  selection.frag  selection.vert  star_corona.frag  star_corona.vert
src/: dynamic_array.h  main.c
src/app/: app.c  app.h
src/camera/: camera.c  camera.h
src/core/: config.c  config.h  engine.h  global.h  input.c  log.h  scheduler.c  scheduler.h  system.h  time.c  time.h
src/editor/: pick_body.c  pick_body.h  selection.c
src/engine/: engine.c  engine.h  scheduler.c
src/gui/: body_params_panel.cpp  config_panel.cpp  gui_layer.h  imgui_layer.cpp  imgui_layer.h  nuklear_layer.c  selection_overlay.cpp
src/gui/imgui/: body_params_panel.cpp  color_edit.cpp  color_edit.h  config_panel.cpp  imgui_layer.cpp  selection_overlay.cpp
src/gui/nuklear/: nuklear_layer.c
src/kepler/: kepler.c  kepler.h
src/math/utils/: utils.c  utils.h
src/octree/: barnes_hut.c  octree.h
src/platform/: input.c  input.h  time.c  time.h
src/predict/: predict_render.c  predict_state.c  predict_state.h
src/render/: bloom.c  body_render.c  body_render.h  celestial_render.c  celestial_render.h  glow.c  predict_render.h  render_context.h  render_world.c  render_world.h  renderer.c  renderer.h  selection.c  selection.h
src/render/passes/: atmosphere.c  atmosphere.h  bloom.c  bloom.h  celestial_render.c  celestial_render.h  glow.h
src/systems/: hierarchy_system.c  hierarchy_system.h  octree.c  octree.h  octree_system.c  octree_system.h  physics_system.c  physics_system.h  relax_system.c  relax_system.h  scheduler.c  scheduler.h
src/time/: time.c  time.h
src/utils/: utils.h
src/world/: body.h  body_factory.h  orbit.c  orbit.h  predict_world.c  predict_world.h  world.c  world.h  world_ids.h
src/world/orbit/: from_positions.c  keplerian.c  orbit.h  plummer.c  virial_rotating.c
web/: shell.html
